--- a/versions/v0.2/mmbx/content/css/elements.css
+++ b/versions/v0.2/mmbx/content/css/elements.css
@@ -1901,10 +1901,6 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
     margin-bottom: 20px;
 }
 
-/* .sign-head-button-div:hover {
-    background-color: var(--color-shadow-05);
-} */
-
 .sign-head-button-div {
     width: 50%;
     height: 50px;
@@ -2624,8 +2620,9 @@ by indicating the width of the class .slider-nb_acticle-width_indicator
 } */
 
 #brandPopUp_loading img {
-    width: auto;
-    height: 100%;
+    /* width: auto; */
+    width: 100%;
+    /* height: 100%; */
     margin: auto;
 }
 
